--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
+    "build": "next build ",
+    "start": "npm run db:init && next start",
     "lint": "next lint",
-    "db:init": "npx tsx src/app/lib/seeders.ts"
+    "db:init": "tsx src/app/lib/seeders.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.13.5",
@@ -21,7 +21,8 @@
     "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "tsx": "^4.19.2"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.12",
